<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".view.SubmitProjectActivity">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        android:weightSum="6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/close"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:background="@drawable/custom_button"
            android:src="@drawable/ic_arrow_back" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_gravity="left"
            android:layout_weight="5"
            android:src="@drawable/gads" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginStart="16dp"

        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout"
        tools:ignore="MissingConstraints">

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/orText"
            android:background="@color/gold" />

        <TextView
            android:id="@+id/orText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/project_submission"
            android:textColor="@color/gold"
            android:textSize="25dp"
            android:textStyle="bold" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/orText"
            android:background="@color/gold" />

    </RelativeLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/border"
        android:hint="@string/FirstName"
        android:inputType="text"
        android:paddingLeft="32dp"
        android:paddingTop="8dp"
        android:paddingRight="32dp"
        android:paddingBottom="8dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/last_name"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/border"
        android:hint="@string/LastName"
        android:inputType="text"
        android:paddingLeft="32dp"
        android:paddingTop="8dp"
        android:paddingRight="32dp"
        android:paddingBottom="8dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/first_name"
        app:layout_constraintTop_toTopOf="@+id/first_name" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/border"
        android:hint="@string/email_address"
        android:inputType="text"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_name" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/project_link_on_github"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/border"
        android:hint="@string/project_link"
        android:inputType="text"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_address" />

    <Button
        android:id="@+id/submit_BTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="start"
        android:layout_marginTop="40dp"
        android:background="@color/gold"
        android:ems="6"
        android:radius="60dp"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/project_link_on_github" />


</androidx.constraintlayout.widget.ConstraintLayout>